--- a/www2-yude-jp/docker-compose.yaml
+++ b/www2-yude-jp/docker-compose.yaml
@@ -7,10 +7,9 @@ services:
     volumes:
       - ./html:/usr/share/caddy
       - ./Caddyfile:/etc/caddy/Caddyfile
+
   cloudflared:
     image: cloudflare/cloudflared:latest
     user: root
     restart: always
-    command: tunnel --url http://caddy --no-chunked-encoding run www2.yude.jp
-    volumes:
-      - '/root/.cloudflared:/root/.cloudflared'
+    command: tunnel --no-autoupdate run --token $CLOUDFLARED_TOKEN
