--- a/gotify/docker-compose.yaml
+++ b/gotify/docker-compose.yaml
@@ -16,6 +16,4 @@ services:
     image: cloudflare/cloudflared:latest
     user: root
     restart: always
-    command: tunnel --url http://server --no-chunked-encoding run gotify.yude.jp
-    volumes:
-      - '/root/.cloudflared:/root/.cloudflared'
+    command: tunnel --no-autoupdate run --token $CLOUDFLARED_TOKEN
