--- a/piping-server/docker-compose.yaml
+++ b/piping-server/docker-compose.yaml
@@ -7,7 +7,5 @@ services:
   cloudflared:
     image: cloudflare/cloudflared:latest
     user: root
-    restart: unless-stopped
-    command: tunnel --url http://piping-server:8080 --no-chunked-encoding run r.yude.jp
-    volumes:
-      - '/root/.cloudflared:/root/.cloudflared'
+    restart: always
+    command: tunnel --no-autoupdate run --token $CLOUDFLARED_TOKEN
